<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutPrincipal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="128dp"
                android:layout_height="87dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icons8_man_64" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/user1_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/user1" />
                <TextView
                    android:id="@+id/user1_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/email1" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/user2_image"
                android:layout_width="128dp"
                android:layout_height="87dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icons8_man_64" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/user2_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user2" />
                <TextView
                    android:id="@+id/user2_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email2" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/user3_image"
                android:layout_width="128dp"
                android:layout_height="87dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icons8_man_64" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/user3_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user3" />
                <TextView
                    android:id="@+id/user3_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email3" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/user4_image"
                android:layout_width="128dp"
                android:layout_height="87dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icons8_man_64" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/user4_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user4" />
                <TextView
                    android:id="@+id/user4_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email4" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/user5_image"
                android:layout_width="128dp"
                android:layout_height="87dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icons8_man_64" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/user5_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user5" />
                <TextView
                    android:id="@+id/user5_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email5" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/horas_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horas"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mins_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/minutos" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/steps"
                    android:layout_width="38dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/icons8_number_6_48" />
                <TextView
                    android:id="@+id/greater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/mayor" />

                <ImageView
                    android:id="@+id/walking"
                    android:layout_width="31dp"
                    android:layout_height="29dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/icons8_walking_50" />
            </LinearLayout>

            <TextView
                android:id="@+id/hora_actual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/walking2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/icons8_walking_50" />
                <TextView
                    android:id="@+id/mins13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mins13" />
                <TextView
                    android:id="@+id/mins12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/mins12" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>